--- a/server/files/stylesheets/docs.css
+++ b/server/files/stylesheets/docs.css
@@ -1925,8 +1925,7 @@ body.progress.animated .ui.progress .bar {
 
   /* Hide Some Fixed Menu Content (Pagination, Search) */
   #example .fixed.menu > .container > .section.item,
-  #example .fixed.menu > .container > .right.menu > .item:last-child,
-  #example .fixed.menu > .container > .icon.item {
+  #example .fixed.menu > .container > .right.menu > .item:last-child {
     display: none;
   }
 
